--- a/service.html
+++ b/service.html
@@ -9,13 +9,13 @@
 <body>
   <header>
     <div class="logo">
-        <a href="home.html">
+        <a href="index.html">
         <img src="logomini.jpg" alt="GoldSeed Logo"></a>
       </div>
     <nav>
       <div class="menu">  
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="service.html">Service</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="contact_us.html">Contact us</a></li>
