--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@
 
   <section id="team">
     <h2>Our Team</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla faucibus sem a fringilla faucibus.</p>
+    <p>miks neko no šī nesaprot</p>
   </section>
 
   <footer>
