--- a/contact_us.html
+++ b/contact_us.html
@@ -26,7 +26,7 @@
 
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla faucibus sem a fringilla faucibus.</p>
+    <p>miks ir liels nabags kuram nav naudas</p>
   </section>
 
   <footer>
