--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
 <div class="home">
   
 <section id="home">
-   <b><p>At GoldSeed Agency, we understand the intricate balance between quality, efficiency, and affordability. Our dropservicing model is crafted to seamlessly connect businesses with top-tier service providers, ensuring that every project is executed with precision and excellence. Whether you're seeking web development, digital marketing, design, or any other online service, GoldSeed Agency is your trusted partner for end-to-end dropservicing solutions.</p>
+   <b><p>
+    At GoldSeed Agency, we navigate the delicate equilibrium of quality, efficiency, and affordability. Our service model intricately links businesses with premier service providers, guaranteeing precision and excellence in every project. Whether it's web development, digital marketing, design, or any online service, GoldSeed Agency is your reliable partner for end-to-end solutions. With a commitment to seamless execution, we ensure that your objectives are met with the utmost precision, establishing a trusted alliance for unparalleled service delivery. Choose GoldSeed Agency to experience a harmonious blend of quality, efficiency, and affordability in every facet of your digital endeavors.</p>
 </section>
-<section id="img">
-  <img src="photo.png">
-</section>
-
+  <img src="photo.png" class="responsive" width="600" height="400">
 </div>
 <hr>
 <div class="end">
