--- a/service.html
+++ b/service.html
@@ -59,12 +59,12 @@
       </div>
       <div class="product-card">
         <div class="product-image">
-          <img src="https://cdn.pixabay.com/photo/2016/11/23/06/57/isolated-t-shirt-1852114__480.png" alt="Product Image">
+          <img src="content.png" alt="Product Image">
         </div>
         <div class="product-details">
-          <h2 class="product-title">Product Name</h2>
-          <p class="product-price">$9.99</p>
-          <p class="product-description">This is a brief description of the product.</p>
+          <h2 class="product-title">Content marketing</h2>
+          <p class="product-price">high-quality blog posts, articles, and other</p>
+          <p class="product-description">Strategic creation and distribution of valuable, relevant content for audience engagement.</p>
           <div class="buttons">
             <button class="compare">More</button>
           </div>
@@ -72,12 +72,12 @@
       </div>
       <div class="product-card">
         <div class="product-image">
-          <img src="https://cdn.pixabay.com/photo/2016/11/23/06/57/isolated-t-shirt-1852113__480.png" alt="Product Image">
+          <img src="coding.png" alt="Product Image">
         </div>
         <div class="product-details">
-          <h2 class="product-title">Product Name</h2>
-          <p class="product-price">$9.99</p>
-          <p class="product-description">This is a brief description of the product.</p>
+          <h2 class="product-title">Programming</h2>
+          <p class="product-price">programs, softwares</p>
+          <p class="product-description">Customized coding solutions for software development needs.</p>
           <div class="buttons">
             <button class="compare">More</button>
           </div>
