--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="service.html">Service</a></li>
-            <li><a href="team.html">Team</a></li>
+            <!--<li><a href="team.html">Team</a></li>-->
             <li><a href="contact_us.html">Contact us</a></li>
         </ul>
       </div>
@@ -40,6 +40,13 @@
 </section>
   <img src="photo.png" class="responsive" width="600" height="400">
 </div>
+<br><br><br><br>
+<!-- action button -->
+<!-- HTML !-->
+<div class="more">
+    <button class="button-85" role="button" ><a id="button" href="service.html">FIND OUT MORE</a></button>
+</div>
+<br><br><br><br>
 <hr>
 <div class="end">
 <div class="carousel-container">
