--- a/service.html
+++ b/service.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="service.html">Service</a></li>
-            <li><a href="team.html">Team</a></li>
+            <!--<li><a href="team.html">Team</a></li>-->
             <li><a href="contact_us.html">Contact us</a></li>
         </ul>
       </div>
@@ -26,9 +26,9 @@
 
   </header>
   <br>
-<h2>Our Services</h2>
-<br>
-<hr>
+  <h2>Our Services</h2>
+  <br>
+  <hr>
   <section id="service">
     <div class="container">
       <div class="product-card">
@@ -84,9 +84,9 @@
         </div>
       </div>
     </div>
-    
+  <hr>
   </section>
-<hr>
+  
   <footer>
     <p>&copy; 2023 GoldSeed. All rights reserved.</p>
   </footer>
