--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="service.html">Service</a></li>
-            <li><a href="team.html">Team</a></li>
+            <!--<li><a href="team.html">Team</a></li>-->
             <li><a href="contact_us.html">Contact us</a></li>
         </ul>
       </div>
