--- a/contact_us.html
+++ b/contact_us.html
@@ -12,12 +12,12 @@
 <body>
   <header>
     <div class="logo">
-            <a href="index"><img src="logomini.jpg" alt="GoldSeed Logo"></a>
+            <a href="../"><img src="logomini.jpg" alt="GoldSeed Logo"></a>
     </div>
     <nav>
       <div class="menu">  
         <ul>
-            <li><a href="index">Home</a></li>
+            <li><a href="../">Home</a></li>
             <li><a href="service">Service</a></li>
             <!--<li><a href="team">Team</a></li>-->
             <li><a href="contact_us">Contact us</a></li>
