--- a/service.html
+++ b/service.html
@@ -6,25 +6,23 @@
   <title>GoldSeed - Service</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/x-icon" href="logo.jpg">
-  <title>GS5gold - Services</title>
 </head>
 <body>
   <header>
     <div class="logo">
-        <a href="../">
+        <a href="index.html">
         <img src="logomini.jpg" alt="GoldSeed Logo"></a>
-      </div>
-    <nav>
-      <div class="menu">  
-        <ul>
-            <li><a href="../">Home</a></li>
-            <li><a href="service">Service</a></li>
-            <!--<li><a href="team">Team</a></li>-->
-            <li><a href="contact_us">Contact us</a></li>
-        </ul>
-      </div>
-    </nav>
-
+    </div>
+      <nav>
+        <div class="menu">  
+          <ul>
+              <li><a href="../">Home</a></li>
+              <li><a href="service">Service</a></li>
+              <!--<li><a href="team">Team</a></li>-->
+              <li><a href="contact_us">Contact us</a></li>
+          </ul>
+        </div>
+      </nav>
   </header>
   <br>
   <h2>Our Services</h2>
@@ -41,7 +39,7 @@
           <p class="product-price">Create or Update website</p>
           <p class="product-description">Creating and maintaining websites for online functionality and user interaction.</p>
           <div class="buttons">
-            <button class="compare">More</button>
+            <button class="compare" role="button"><a id="button" href="web.html">More</a></button>
           </div>
         </div>
       </div>
@@ -54,7 +52,7 @@
           <p class="product-price">Stand out in Socials</p>
           <p class="product-description">Promoting brands through online platforms for audience engagement and visibility.</p>
           <div class="buttons">
-            <button class="compare">More</button>
+            <button class="compare" role="button"><a id="button" href="social.html">More</a></button>
           </div>
         </div>
       </div>
@@ -67,20 +65,20 @@
           <p class="product-price">high-quality blog posts, articles, and other</p>
           <p class="product-description">Strategic creation and distribution of valuable, relevant content for audience engagement.</p>
           <div class="buttons">
-            <button class="compare">More</button>
+            <button class="compare" role="button"><a id="button" href="content.html">More</a></button>
           </div>
         </div>
       </div>
       <div class="product-card">
         <div class="product-image">
-          <img src="coding.png" alt="Product Image">
+          <img src="video.png" alt="Product Image">
         </div>
         <div class="product-details">
-          <h2 class="product-title">Programming</h2>
-          <p class="product-price">programs, softwares</p>
-          <p class="product-description">Customized coding solutions for software development needs.</p>
+          <h2 class="product-title">Video Editing</h2>
+          <p class="product-price">Cutting, Special effects, other </p>
+          <p class="product-description">Video editing for social media, advertisements and other needs.</p>
           <div class="buttons">
-            <button class="compare">More</button>
+            <button class="compare" role="button"><a id="button" href="video.html">More</a></button>
           </div>
         </div>
       </div>
