--- a/service.html
+++ b/service.html
@@ -39,7 +39,7 @@
           <p class="product-price">Create or Update website</p>
           <p class="product-description">Creating and maintaining websites for online functionality and user interaction.</p>
           <div class="buttons">
-            <button class="compare" role="button"><a id="button" href="web.html">More</a></button>
+            <button class="compare" role="button"><a id="button" href="web">More</a></button>
           </div>
         </div>
       </div>
@@ -52,7 +52,7 @@
           <p class="product-price">Stand out in Socials</p>
           <p class="product-description">Promoting brands through online platforms for audience engagement and visibility.</p>
           <div class="buttons">
-            <button class="compare" role="button"><a id="button" href="social.html">More</a></button>
+            <button class="compare" role="button"><a id="button" href="social.">More</a></button>
           </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
           <p class="product-price">high-quality blog posts, articles, and other</p>
           <p class="product-description">Strategic creation and distribution of valuable, relevant content for audience engagement.</p>
           <div class="buttons">
-            <button class="compare" role="button"><a id="button" href="content.html">More</a></button>
+            <button class="compare" role="button"><a id="button" href="content">More</a></button>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
           <p class="product-price">Cutting, Special effects, other </p>
           <p class="product-description">Video editing for social media, advertisements and other needs.</p>
           <div class="buttons">
-            <button class="compare" role="button"><a id="button" href="video.html">More</a></button>
+            <button class="compare" role="button"><a id="button" href="video">More</a></button>
           </div>
         </div>
       </div>
