--- a/web.html
+++ b/web.html
@@ -42,7 +42,7 @@
 <!-- action button -->
 <!-- HTML !-->
 <div class="more">
-    <button class="button-85" role="button" ><a id="button" href="contact_us.html">GET IN TOUCH</a></button>
+    <button class="button-85" role="button" ><a id="button" href="contact_us">GET IN TOUCH</a></button>
 </div>
 <br><br><br><br>
 <hr>
