--- a/service.html
+++ b/service.html
@@ -52,7 +52,7 @@
           <p class="product-price">Stand out in Socials</p>
           <p class="product-description">Promoting brands through online platforms for audience engagement and visibility.</p>
           <div class="buttons">
-            <button class="compare" role="button"><a id="button" href="social.">More</a></button>
+            <button class="compare" role="button"><a id="button" href="social">More</a></button>
           </div>
         </div>
       </div>
