--- a/service.html
+++ b/service.html
@@ -25,7 +25,7 @@
       </nav>
   </header>
   <br>
-  <h2>Here is what we can provide to our clients to develop and grow other companies, agencies as well as social presence Online!</h2>
+  <h2>Here is what we can provide to our clients to develop and <br>grow other companies, agencies as well as social presence Online!</h2>
   <br>
   <hr>
   <section id="service">
