--- a/service.html
+++ b/service.html
@@ -25,11 +25,12 @@
       </nav>
   </header>
   <br>
-  <h2>Here is what we can provide to our clients to develop and <br>grow other companies, agencies as well as social presence Online!</h2>
+  <h1>Grow <b>companies</b>, <b>agencies</b> as well as social presence <b>Online!</b></h1>
   <br>
   <hr>
   <section id="service">
     <div class="container">
+      <!-- Developing Web Designer
       <div class="product-card">
         <div class="product-image">
           <img src="web.png">
@@ -43,6 +44,7 @@
           </div>
         </div>
       </div>
+      -->
       <div class="product-card">
         <div class="product-image">
           <img src="social.png" alt="Product Image">
