--- a/video.html
+++ b/video.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width ">
-        <title>GoldSeed</title>
-  <link rel="stylesheet" href="stylew.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GoldSeed - Service</title>
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/x-icon" href="logo.jpg">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="logo">
         <a href="index.html">
         <img src="logomini.jpg" alt="GoldSeed Logo"></a>
-      </div>
+    </div>
       <nav>
         <div class="menu">  
           <ul>
@@ -23,40 +23,57 @@
           </ul>
         </div>
       </nav>
-
   </header>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 text-center">
-         <h1 class="animate-charcter">GoldSeed </h1>
+  <br>
+  <h1>We offer wide variety of video service as Listed Below!</h1>
+  <br>
+  <hr>
+  <section id="service">
+    <div class="container">
+      
+      <div class="product-card">
+        <div class="product-image">
+          <img src="short.png" alt="Product Image">
+        </div>
+        <div class="product-details">
+          <h2 class="product-title">Short Form Content</h2>
+          <p class="product-price">Instagram Reels, TikTok, Youtube Shorts</p>
+          <p class="product-description">Posting well edited content daily, weekly on many platforms</p>
+          <div class="buttons">
+            <button class="compare" role="button"><a id="button" href="social">More</a></button>
+          </div>
+        </div>
+      </div>
+      <div class="product-card">
+        <div class="product-image">
+          <img src="Long.png" alt="Product Image">
+        </div>
+        <div class="product-details">
+          <h2 class="product-title">Long Form Content</h2>
+          <p class="product-price">Youtube or per request videos</p>
+          <p class="product-description">Whether you need video cutting, remove something in video, 2D or 3D animations.</p>
+          <div class="buttons">
+            <button class="compare" role="button"><a id="button" href="content">More</a></button>
+          </div>
+        </div>
+      </div>
+      <div class="product-card">
+        <div class="product-image">
+          <img src="advert.png" alt="Product Image">
+        </div>
+        <div class="product-details">
+          <h2 class="product-title">Digital billboards, Advertisements</h2>
+          <p class="product-price">Animations, product placement </p>
+          <p class="product-description">Short video or Image design for Advertisements.</p>
+          <div class="buttons">
+            <button class="compare" role="button"><a id="button" href="video">More</a></button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-<div class="home">
-  <h2>Video editing</h2>
-    <p>Our video editing service provides professional <b>cutting, special effects,</b> and other enhancements tailored to meet your specific needs. We specialize in editing videos for <b>social media, advertisements, and various other purposes</b>. From crafting engaging content to adding impactful special effects, we ensure that your videos stand out and captivate your audience effectively.</p>
-<section id="home">
-
-</div>
-<br><br><br><br>
-<!-- action button -->
-<!-- HTML !-->
-<div class="more">
-    <button class="button-85" role="button" ><a id="button" href="contact_us">GET IN TOUCH</a></button>
-</div>
-<br><br><br><br>
-<hr>
-<div class="end">
-<div class="carousel-container">
-  <div class="carousel-content">
-      <div class="carousel-item"><h2>We provide Service!</h2></div>
-      
-      <div class="carousel-item"><h2>We provide growth!</h2></div>
-      <!-- Add more slides as needed -->
-  </div>
-</div>
-</div>
-<hr>
+  <hr>
+  </section>
+  
   <footer>
     <p>&copy; 2023 GoldSeed. All rights reserved.</p>
   </footer>
