--- a/social.html
+++ b/social.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width ">
         <title>GoldSeed</title>
-  <link rel="stylesheet" href="stylew.css">
+  <link rel="stylesheet" href="stylesoc.css">
   <link rel="icon" type="image/x-icon" href="logo.jpg">
 </head>
 <body>
