--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   
 <section id="home">
    <b><p>
-    At GoldSeed Agency, we navigate the delicate equilibrium of quality, efficiency, and affordability. Our service model intricately links businesses with premier service providers, guaranteeing precision and excellence in every project. Whether it's web development, digital marketing, design, or any online service, GoldSeed Agency is your reliable partner for end-to-end solutions. With a commitment to seamless execution, we ensure that your objectives are met with the utmost precision, establishing a trusted alliance for unparalleled service delivery. Choose GoldSeed Agency to experience a harmonious blend of quality, efficiency, and affordability in every facet of your digital endeavors.</p>
+    At GoldSeed Agency, we navigate the delicate equilibrium of quality, efficiency, and affordability. Our service model intricately links businesses with premier service providers, guaranteeing precision and excellence in every project. Whether it's web development, digital marketing, design, or any online service, GoldSeed Agency is your reliable partner for end-to-end solutions. <br><br>With a commitment to seamless execution, we ensure that your objectives are met with the utmost precision, establishing a trusted alliance for unparalleled service delivery. Choose GoldSeed Agency to experience a harmonious blend of quality, efficiency, and affordability in every facet of your digital endeavors.</p>
 </section>
   <img src="photo.png" class="responsive" width="600" height="400">
 </div>
