--- a/video.html
+++ b/video.html
@@ -53,7 +53,7 @@
           <p class="product-price">Youtube or per request videos</p>
           <p class="product-description">Whether you need video cutting, remove something in video, 2D or 3D animations.</p>
           <div class="buttons">
-            <button class="compare" role="button"><a id="button" href="content">More</a></button>
+            <button class="compare" role="button"><a id="button" href="long">More</a></button>
           </div>
         </div>
       </div>
