--- a/service.html
+++ b/service.html
@@ -54,7 +54,7 @@
           <p class="product-price">Stand out in Socials</p>
           <p class="product-description">Promoting brands through online platforms for audience engagement and visibility.</p>
           <div class="buttons">
-            <button class="compare" role="button"><a id="button" href="social">More</a></button>
+            <button class="compare" role="button"><a id="button" href="service">Comming soon</a></button>
           </div>
         </div>
       </div>
@@ -67,7 +67,7 @@
           <p class="product-price">high-quality blog posts, articles, and other</p>
           <p class="product-description">Strategic creation and distribution of valuable, relevant content for audience engagement.</p>
           <div class="buttons">
-            <button class="compare" role="button"><a id="button" href="content">More</a></button>
+            <button class="compare" role="button"><a id="button" href="service">Comming soon</a></button>
           </div>
         </div>
       </div>
