--- a/long.html
+++ b/long.html
@@ -41,7 +41,7 @@
 <div class="flex-container">
   <div>For Long Form videos we have partnered with <b>Ganteli</b>, a studio that bring the best quality of video editing, starting from simple <b>video cutting and subtitles</b>, to Complex; <br><b>2D and 3D animating, <br>morphing, <br>removing objects in video </b><br>and more.<br><br></div>
   <div><video class="responsive" width="160" height="pixels" controls>
-    <source src="long.mp4" type="video/mp4">
+    <source src="Long.mp4" type="video/mp4">
   </video><!--Let us take your videos to the next level. Trust us to deliver an edited video that not only meets your needs but also resonates with your audience. Contact us today to get started on creating a video that truly shines! --></div>
 </div>
 <br><p class="final">Let us take your videos to the next level. Trust us to deliver an edited video that not only meets your needs but also resonates with your audience. Contact us today to get started on creating a video that truly shines!</p><br>
